[package]
name = "rsntp"
version = "0.2.0"
authors = ["Szilveszter Dobák <dobaksz@gmail.com>"]
repository = "https://github.com/dobaksz/rsntp"
documentation = "https://docs.rs/rsntp"
edition = "2018"
keywords = ["sntp", "time", "async"] 
categories = ["network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An RFC 4330 compliant Simple Network Time Protocol (SNTP) client library for Rust"

[features]
default = ["async"]
async = ["tokio"]

[dependencies]
chrono = "0.4"
tokio = { version = "0.2", features = ["udp", "dns", "time"], optional = true }